// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simulations.vue match snapshot item 1`] = `
<div class="simulations">
  <v-container-stub tag="div" fluid="true">
    <v-row-stub tag="div" class="display-1 mx-1 mt-3 primary--text">
      <v-col-stub tag="div" col="8" class="pa-0 ma-0"><span class="me-2"><v-icon-stub>mdi-creation</v-icon-stub></span>Simulations
        <span><v-icon-stub large="" color="primary">mdi-chevron-right</v-icon-stub>
          simulation001
        </span></v-col-stub>
    </v-row-stub>
    <transition-stub name="fade-simulations-leave" mode="out-in">
      <keep-alive-stub>
        <router-view-stub></router-view-stub>
      </keep-alive-stub>
    </transition-stub>
  </v-container-stub>
</div>
`;

exports[`Simulations.vue match snapshot list 1`] = `
<div class="simulations">
  <v-container-stub tag="div" fluid="true">
    <v-row-stub tag="div" class="display-1 mx-1 mt-3 primary--text">
      <v-col-stub tag="div" col="8" class="pa-0 ma-0"><span class="me-2"><v-icon-stub>mdi-creation</v-icon-stub></span>Simulations
        <!---->
      </v-col-stub>
    </v-row-stub>
    <transition-stub name="fade-simulations-leave" mode="out-in">
      <keep-alive-stub>
        <router-view-stub></router-view-stub>
      </keep-alive-stub>
    </transition-stub>
  </v-container-stub>
</div>
`;
